--- a/input-and-output.html
+++ b/input-and-output.html
@@ -271,27 +271,21 @@ reverseWords = unwords . map reverse . words
           재귀적으로 호출하는것 역시 괜찮습니다. 따라서, 어떤 의미에선 프로그램의 시작 부분으로 거슬러 올라갑니다.</p>
         <p>그러면 <span class="fixed">null line</span>이 참을 만족하면 어떻게 될까요? 이러한 경우 <i>then</i>이
           수행됩니다. 자세히 살펴본다면, <span class="fixed">then return ()</span>를 발견할 수 있을
-          것입니다. :TODO C, Java, Python과 같은 imperative언어를 경험하였다면, you're probably
-          thinking that you know what this <span class="fixed">return</span>이
-          하는 일이 무엇인지 알고있으며,&nbsp; does and chances are you've already skipped
-          this really long paragraph 실제로 기나긴 패러다임을 이미 넘어선. Well, here's the
-          thing: <em>하스켈에서의 <span class="fixed">return</span>은 실제로, 다른 대부분의
-            언어에서의 <span class="fixed">return</span>과 같은 점이 없습니다!</em> 많은 사람들이
-          혼란스럽게 하는 동일한 이름을 가졌지만, 이는 사실 매우 다릅니다. imperative언어에서의 <span class="fixed">return</span>은
+          것입니다. 여러분들이 C, Java, Python과 같은 imperative언어를 경험하였다면, 아마 <span class="fixed">return</span>이
+          하는 일이 무엇인지 알고있다고 생각하여 실제론 기나긴 패러다임을 이미 넘어섰다고 생각할지도 모르겠습니다. 흠, 과연 그럴까요?
+          <em>하스켈에서의 <span class="fixed">return</span>은 실제로, 다른 대부분의 언어에서의 <span
+              class="fixed">return</span>과 같지 않습니다!</em> 동일한 이름을 가져 많은 사람들을
+          혼란스럽게 하지만, 사실 매우 다릅니다. imperative언어에서의 <span class="fixed">return</span>은
           보통 메소드나 서브루틴의 실행을 끝내거나, 호출한 누군가에게 값을 제공합니다. 하스켈에선 (특히 I/O actions에선),
           I/O action에서 순수한 값을 얻어오는 것입니다. 전에 상자에 비유한 것을 들쳐보자면, 이는 취한 값을 상자안에
           가둬버립니다. I/O action의 결과는 사실 아무것도 하지 않으며, 이의 결과로 봉인된 값을 갖고 있기만 합니다. 따라서
           I/O context에서의 <span class="fixed">return "haha"</span>은 <span class="fixed">IO
-            String</span>타입을 지닐 것입니다. What's the point of just transforming a
-          pure value into an I/O action 속에서 아무것도 하지않는 순수한 값을 옮기기만 하는 이유가 무엇일까요?
-          Why taint our program with <span class="fixed">IO</span> more than it
-          has to be? Well, we needed some I/O action to carry out in the case of
-          an empty input line. 이것이 바로 <span class="fixed">return ()</span>라
+            String</span>타입을 지닐 것입니다. I/O action속에서 아무것도 하지않는 순수한 값을 옮기기만 하는 이유가
+          무엇일까요? 왜 저희 프로그램이 <span class="fixed">IO</span>로 더럽혀질까요? 비어있는 라인을
+          처리하려면 어떠한 I/O action이 필요합니다. 이것이 바로 <span class="fixed">return ()</span>라
           작성하여 아무것도 행하는 모조 I/O action을 만들어야 되는 이유입니다. </p>
-        <p>Using <span class="fixed">return</span>은 doesn't cause the I/O <i>do</i>
-          블록의 실행을 끝내거나 그와 비슷한 일을 발생시키지 않습니다block to end in execution or anything
-          like that. 예를들어, this program will quite happily carry out all the way
-          to the last line:</p>
+        <p><span class="fixed">return</span>은 I/O <i>do</i> 블록의 실행을 끝내거나 그와 비슷한
+          일을 하지 않습니다. 예를들어, 다음 프로그램은 마지막 줄까지 순조롭게 진행될 것입니다:</p>
         <pre name="code" class="haskell:hs">main = do
     return ()
     return "HAHAHA"
@@ -300,9 +294,9 @@ reverseWords = unwords . map reverse . words
     return 4
     putStrLn line
 </pre>
-        <p>여기나온 <span class="fixed">return</span>들이 하는 일은 봉인된 값을 갖는 것을 제외하고 어떠한
-          일도 하지 않는 I/O action들을 만드는 것이며, name에 bind되지 않았기에 그 결과는 버려집니다. 무언가를
-          name에 bind하기 위해 <span class="fixed">return</span>을 <span class="fixed">&lt;-</span>와
+        <p>여기나온 <span class="fixed">return</span>들이 하는 일은, 봉인된 값을 갖는 것을 제외하고는
+          어떠한 일도 하지 않는 I/O action들을 만드는 것이며, name에 bind되지 않았기에 그 결과는 버려지게 됩니다.
+          무언가를 name에 bind하기 위해 <span class="fixed">return</span>을 <span class="fixed">&lt;-</span>와
           결합하여 사용할 수 있습니다.</p>
         <pre name="code" class="haskell:hs">main = do
     a &lt;- return "hell"
@@ -319,14 +313,15 @@ reverseWords = unwords . map reverse . words
         b = "yeah"
     putStrLn $ a ++ " " ++ b
 </pre>
-        <p>When dealing with I/O <i>do</i>블록을 다룰 때에는 blocks, we mostly use <span
-            class="fixed">return</span> either because we need to create an I/O
-          action that doesn't do anything 아무것도 하지 않는 만들거나, because we don't want
-          the I/O action that's made up from a <i>do</i> block to have the
-          result value of its last action, but we want it to have a different
-          result value, so we use <span class="fixed">return</span> to make an
-          I/O action that always has our desired result contained&nbsp; and we
-          put it at the end.</p>
+        <p>:TODO I/O <i>do</i>블록을 다룰 때에는, we mostly use <span class="fixed">return</span>
+          either because we need to create an I/O action that doesn't do
+          anything 아무것도 하지 않는 만들거나 I/O action을 만들거나, because we don't want the
+          I/O action that's made up from a <i>do</i>블록으로부터 block to have the
+          result value of its last action 마지막 action의 결과 갖도록, but we want it to
+          have a different result value, so we use <span class="fixed">return</span>
+          to make an I/O action that always 항상 저희가 원하는 결과를 포함하는 I/O action을 만들기
+          위해 return을 사용할 것이며, 이를 마지막에 넣을 것입니다 has our desired result
+          contained&nbsp; and we put it at the end.</p>
         <div class="hintbox">또한 <i>do</i>블록은 단지 하나의 I/O action을 가질 수 있습니다. 이러한
           경우, it's the same as just writing the I/O action을 쓴 것과 같습니다. 이러한 경우 <i>else</i>
           또한 <i>do</i>를 가지므로 몇몇 사람들은 <span class="fixed">then do return ()</span>라
@@ -355,8 +350,8 @@ Hey, I'm Andy!
 teh
 </pre>
         <p><span class="fixed">putStr</span>는 사실 <span class="fixed">putChar</span>의
-          도움으로 재귀적으로 정의되었습니다. The edge condition of <span class="fixed">putStr</span>의
-          주변조건은 비어있는 문자열이므로, 비어있는 문자열을 출력하고자 한다면, <span class="fixed">return ()</span>을
+          도움으로 재귀적으로 정의되었습니다. <span class="fixed">putStr</span>의 주변조건은 비어있는
+          문자열이므로, 비어있는 문자열을 출력하고자 한다면, <span class="fixed">return ()</span>을
           이용하여 아무런 일도 하지 않는 I/O action을 반환합니다. 비어있지 않다면, <span class="fixed">putChar</span>를
           이용하여 문자열의 첫번째 문자를 출력하고, <span class="fixed">putStr</span>를 이용하여 나머지를
           출력합니다.</p>
@@ -385,12 +380,10 @@ True
 3.2
 [3,4,3]
 </pre>
-        <p>보시다시피, 이는 매우 편리한 함수입니다. Remember how we talked about how 어떻게 I/O
-          action이 수행되는지 are performed only when they fall into <span class="fixed">main</span>
-          or when we try to evaluate them in the GHCI 프롬프트에서 평가할때 prompt? 사실 (<span
-            class="fixed">3</span>이나 <span class="fixed">[1,2,3]</span>와 같은) 값을
-          입력하고 엔터를 누르면, GHCI는 터미널에 그 값을 보여주기 위해 <span class="fixed">print</span>를
-          이용합니다! </p>
+        <p>보시다시피, 이는 매우 편리한 함수입니다. <span class="fixed">main</span>에 닿거나,&nbsp;
+          GHCI 프롬프트에서 평가할때 어떻게 I/O action이 수행되는지에 대해 예기한 기억이 나십니까? 사실 (<span class="fixed">3</span>이
+          나 <span class="fixed">[1,2,3]</span>와 같은) 값을 입력하고 엔터를 누르면, GHCI는 터미널에
+          그 값을 보여주기 위해 <span class="fixed">print</span>를 이용합니다! </p>
         <pre name="code" class="haskell:hs">ghci&gt; 3
 3
 ghci&gt; print 3
@@ -400,10 +393,9 @@ ghci&gt; map (++"!") ["hey","ho","woo"]
 ghci&gt; print (map (++"!") ["hey","ho","woo"])
 ["hey!","ho!","woo!"]
 </pre>
-        <p>문자열을 출력하고자 할때에는 보통 사용합니다 When we want to print out strings, we
-          usually use <span class="fixed">putStrLn</span> because we don't want
-          the quotes around them, but for printing out values of other types to
-          the terminal, <span class="fixed">print</span> is used the most.</p>
+        <p>문자열을 출력하고자 할때에는 quote를 피하고자 보통 <span class="fixed">putStrLn</span>을
+          사용하며, 터미널에 다른 타입의 값들을 출력하는데 있어선 <span class="fixed">print</span>가 가장
+          많이 쓰입니다.</p>
         <p><span class="function label">getChar</span>는 입력에서 문자를 읽어오는 I/O
           action입니다. 따라서, I/O action이 담고있는 결과가 <span class="fixed">Char</span>이
           기에 타입서명은 <span class="fixed">getChar :: IO Char</span>입니다. 버퍼링으로 인해,
@@ -416,10 +408,9 @@ ghci&gt; print (map (++"!") ["hey","ho","woo"])
             main
         else return ()
 </pre>
-        <p>이는 문자를 읽어 띄어쓰기를 검사하는 프로그램처럼 보입니다. If it is, halt execution and if it
-          isn't, print it to the terminal and then do the same thing all over
-          again. Well, it kind of does, only not in the way you might expect.
-          Check this out:</p>
+        <p>이 프로그램은 문자를 읽어 띄어쓰기를 검사하는 것처럼 보입니다. 띄어쓰기가 있다면 실행을 멈추고, 그렇지 않다면 터미널에
+          출력후 동일한 일을 다시 반복합니다. Well, it kind of does, only not in the way you
+          might expect. 확인해 봅시다:</p>
         <pre name="code" class="plain">$ runhaskell getchar_test.hs
 hello sir
 hello
@@ -443,12 +434,12 @@ main = do
         putChar c
         main
 </pre>
-        <p>보시다시피, 이는 <span class="fixed">if <i>something</i> then do <i>some
+        <p>보시다시피, when은 <span class="fixed">if <i>something</i> then do <i>some
               I/O action</i> else return ()</span> 패턴을 녹여내는데 있어 유용합니다.</p>
         <p><span class="label function">sequence</span>는 I/O action 리스트를 받아
           순차적으로 실행되는 I/O action을 반환합니다. 이러한 I/O action이 포함하는 결과는 모든 I/O action이
-          수행된 결과를 담은 리스트가 될 것입니다. 타입 서명은 <span class="fixed">sequence :: [IO a]
-            -&gt; IO [a]</span>입니다. 다음과 같은 일을 할 수 있습니다:</p>
+          수행된 결과를 담은 리스트가 될 것입니다. sequence의 타입 서명은 <span class="fixed">sequence
+            :: [IO a] -&gt; IO [a]</span>입니다. 다음과 같은 일을 할 수 있습니다:</p>
         <pre name="code" class="haskell:hs">main = do
     a &lt;- getLine
     b &lt;- getLine
@@ -462,8 +453,8 @@ main = do
 </pre>
         <p>따라서 <span class="fixed">sequence [getLine, getLine, getLine]</span>는
           <span class="fixed">getLine</span>을 3번 수행하는 I/O action을 만들어 냅니다. 이러한
-          action을 name과 bind한다면, 결과는 결과 리스트가 될 것이며, 위 경우에서는 사용자가 프롬프트에 입력한 3개를
-          담은 리스트가 될 것입니다.</p>
+          action을 name과 bind한다면 결과는 결과 리스트가 될 것이며, 위 경우에서는 사용자가 프롬프트에 입력한 3개를 담은
+          리스트가 될 것입니다.</p>
         <p><span class="fixed">sequence</span>에 대한 일반적인 패턴은 리스트에 대해 <span class="fixed">print</span>나
           <span class="fixed">putStrLn</span>와 같은 함수를 map하는 것입니다. <span class="fixed">map
             print [1,2,3,4]</span>는 I/O action을 생성하지 않습니다. <span class="fixed">[print
@@ -487,9 +478,8 @@ main = do
         <p>리스트에 대한 I/O action을 반환하는 함수를 매핑(mapping)하여 순서화시키는(sequencing) 것은 매우
           일상적이기에, 유틸리티 함수 <span class="label function">mapM</span>와 <span class="label function">mapM_</span>이
           도입되었습니다. <span class="fixed">mapM</span>는 함수와 리스트를 취해, 리스트에 대해 함수를
-          map한 후 sequences합니다. <span class="fixed">mapM_</span>는 동일한 일을
-          수행하지만,&nbsp;
-          결과를 버려버립니다. sequence된 I/O action이 가지는 결과가 무엇인지 상관치 않을때 보통&nbsp; <span
+          map한 후 sequence합니다. <span class="fixed">mapM_</span>는 동일한 일을 수행하지만,
+          결과는 버려집니다. sequence된 I/O action이 가지는 결과가 무엇인지 상관치 않을때 보통&nbsp; <span
             class="fixed">mapM_</span>를 사용합니다.</p>
         <pre name="code" class="haskell:hs">ghci&gt; mapM print [1,2,3]
 1
@@ -513,9 +503,9 @@ main = forever $ do
     putStrLn $ map toUpper l
 </pre>
         <p><span class="label function">forM</span>은 ( <span class="fixed">Control.Monad</span>에
-          위치한) <span class="fixed">mapM</span>와 같습니다, only that it has its
-          parameters switched around. The first parameter is the list and the
-          second one is the function to map over that list, which is then
+          위치한) <span class="fixed">mapM</span>와 같습니다, :TODO only that it has
+          its parameters switched around. The first parameter is the list and
+          the second one is the function to map over that list, which is then
           sequenced. Why is that useful? Well, with some creative use of lambdas
           and <i>do</i> notation, we can do stuff like this:</p>
         <pre name="code" class="haskell:hs">import Control.Monad
