--- a/input-and-output.html
+++ b/input-and-output.html
@@ -277,12 +277,12 @@ reverseWords = unwords . map reverse . words
               class="fixed">return</span>과 같지 않습니다!</em> 동일한 이름을 가져 많은 사람들을
           혼란스럽게 하지만, 사실 매우 다릅니다. imperative언어에서의 <span class="fixed">return</span>은
           보통 메소드나 서브루틴의 실행을 끝내거나, 호출한 누군가에게 값을 제공합니다. 하스켈에선 (특히 I/O actions에선),
-          I/O action에서 순수한 값을 얻어오는 것입니다. 전에 상자에 비유한 것을 들쳐보자면, 이는 취한 값을 상자안에
-          가둬버립니다. I/O action의 결과는 사실 아무것도 하지 않으며, 이의 결과로 봉인된 값을 갖고 있기만 합니다. 따라서
-          I/O context에서의 <span class="fixed">return "haha"</span>은 <span class="fixed">IO
-            String</span>타입을 지닐 것입니다. I/O action속에서 아무것도 하지않는 순수한 값을 옮기기만 하는 이유가
-          무엇일까요? 왜 저희 프로그램이 <span class="fixed">IO</span>로 인해 더럽혀질까요? 비어있는 라인을
-          처리하려면 어떠한 I/O action이 필요합니다. 이것이 바로 <span class="fixed">return ()</span>라
+          I/O action에서 순수한 값을 얻어오는 것입니다. 전에 상자에 비유한 것을 들쳐보자면, I/O action은 얻어온 값을
+          상자안에 가둬버립니다. I/O action의 결과는 사실 아무것도 하지 않으며, 이의 결과로 봉인된 값을 갖고 있기만 합니다.
+          따라서 I/O context에서의 <span class="fixed">return "haha"</span>은 <span class="fixed">IO
+            String</span>타입을 지닐 것입니다. I/O action이 아무것도 하지않고 순수한 값을 속에 품고 옮기기만 하는
+          이유가 무엇일까요? 왜 저희 프로그램이 <span class="fixed">IO</span>로 인해 더럽혀질까요? 비어있는
+          라인을 처리하려면 어떠한 I/O action이 필요합니다. 이것이 바로 <span class="fixed">return ()</span>라
           작성하여 아무것도 행하는 모조 I/O action을 만들어야 되는 이유입니다. </p>
         <p><span class="fixed">return</span>은 I/O <i>do</i> 블록의 실행을 끝내거나 그와 비슷한
           일을 하지 않습니다. 예를들어, 다음 프로그램은 마지막 줄까지 순조롭게 진행될 것입니다:</p>
@@ -321,7 +321,7 @@ reverseWords = unwords . map reverse . words
           이러한 경우, 하나의 I/O action만을 쓴 것과 같습니다. <i>else</i> 또한 이러한 경우 <i></i><i>do</i>를
           포함하기에, 몇몇 사람들은 <span class="fixed">then do return ()</span>라 작성하는 것을
           선호하기도 합니다.</div>
-        <p>파일로 넘어가기전에, I/O를 다루는데 있어 유용한 함수들을 먼저 살펴봅시다.</p>
+        <p>파일로 넘어가기전에 먼저, I/O를 다루는데 있어 유용한 함수들을 살펴봅시다.</p>
         <p><span class="label function">putStr</span>은 문자열을 인자로 받아 터미널에 문자열로
           출력되는 I/O action을 반환하는 점에서는 <span class="fixed">putStrLn</span>와
           닮았지만,&nbsp; <span class="fixed">putStrLn</span>은 문자열을 출력하고 새로운 줄로
@@ -357,11 +357,11 @@ putStr (x:xs) = do
     putStr xs
 </pre>
         <p>순수한 코드에서처럼, I/O에서 재귀를 사용할 수 있는것에 주목하시기 바랍니다. 순수한 코드에서 처럼, 주변 조건을
-          정의하였고 실제 결과가 무엇인지 생각하였습니다. 우선 첫번째 문자를 출력하고, 나머지 문자열을 출력합니다.</p>
+          정의하였고 실제 결과가 무엇인지 생각하였습니다. 우선 첫번째 문자를 출력하고, 나머지 문자열을 출력하였습니다.</p>
         <p><span class="label function">print</span>는 값을 문자열로 만드는 <span class="fixed">show</span>라
           불리는 <span class="fixed">Show</span> 인스턴스 타입의 값을 취해 터미널에 출력합니다. 근본적으로
           이는 단지 <span class="fixed">putStrLn . show</span>입니다. 우선 <span class="fixed">show</span>를
-          돌려, <span class="fixed">putStrLn</span>에게 넘겨 값을 출력시킵니다.</p>
+          돌려, <span class="fixed">putStrLn</span>에게 값을 넘겨 출력시킵니다.</p>
         <pre name="code" class="haskell:hs">main = do   print True
             print 2
             print "haha"
@@ -388,7 +388,7 @@ ghci&gt; map (++"!") ["hey","ho","woo"]
 ghci&gt; print (map (++"!") ["hey","ho","woo"])
 ["hey!","ho!","woo!"]
 </pre>
-        <p>문자열을 출력하고자 할때에는 quote를 피하고자 보통 <span class="fixed">putStrLn</span>을
+        <p>문자열 출력시, quote를 피하고자 할 때에는 보통 <span class="fixed">putStrLn</span>을
           사용하며, 터미널에 다른 타입의 값들을 출력하는데 있어선 <span class="fixed">print</span>가 가장
           많이 쓰입니다.</p>
         <p><span class="function label">getChar</span>는 입력에서 문자를 읽어오는 I/O
@@ -470,7 +470,7 @@ main = do
           하지만 GHCI에서 <span class="fixed">getLine</span>를 한다면, <span class="fixed">getLine</span>은
           <span class="fixed">IO String</span> 타입을 갖기에 I/O action의 결과가 출력될 것입니다.</p>
         <p>리스트에 대한 I/O action을 반환하는 함수를 매핑(mapping)하여 순서화시키는(sequencing) 것은 매우
-          일상적이기에, 유틸리티 함수 <span class="label function">mapM</span>와 <span class="label function">mapM_</span>이
+          일상적이기에, 유틸리티 함수 <span class="label function">mapM</span>와 <span class="label function">mapM</span>이
           도입되었습니다. <span class="fixed">mapM</span>는 함수와 리스트를 취해, 리스트에 대해 함수를
           map한 후 sequence합니다. <span class="fixed">mapM_</span>는 동일한 일을 수행하지만,
           결과는 버려집니다. sequence된 I/O action이 가지는 결과가 무엇인지 상관치 않을때 보통&nbsp; <span
@@ -516,9 +516,9 @@ main = do
             class="fixed">return color</span>를 한것에 주목하시기 바랍니다. <i>do</i>블록에서
           정의된 I/O action은 내부에 색상(color)를 결과로 가질 것이기에 이렇게 했습니다. 사실 <span class="fixed">getLine</span>이
           이미 내부에 포함하고 있기에 그렇게 하지 않아도 됐었습니다. <span class="fixed">color &lt;-
-            getLine</span>라 한다음 <span class="fixed">return color</span>라고 하는 것은
-          <span class="fixed">getLine</span>에 서 결과를 꺼내와서 다시 집어넣는 것이므로,&nbsp; 단순히
-          <span class="fixed">getLine</span>이라 한 것과 동일합니다. <span class="fixed">forM</span>은
+            getLine</span>라고 한 다음 <span class="fixed">return color</span>라고 하는
+          것은 <span class="fixed">getLine</span>에서 결과를 꺼내와서 다시 집어넣는 것이므로, 단순히 <span
+            class="fixed">getLine</span>이라 한 것과 동일합니다. <span class="fixed">forM</span>은
           I/O action을 만들어내며, 그 결과는 <span class="fixed">colors</span>에
           bind되었습니다. <span class="fixed">colors</span>는 단지 문자열을 담고있는 평범한
           리스트입니다. 마지막부분에선, 이러한 색상들(colors)을 <span class="fixed">mapM putStrLn
@@ -1627,8 +1627,8 @@ main = do
           따라서 이 리스트 전체는 예비 리스트와 갔습니다. <span class="fixed">[1,2,3,4]</span>는&nbsp;
           <span class="fixed">1:2:3:4:[]</span>에 대한 syntax suger라는 것을 명심하시기
           바랍니다. 리스트의 첫번째 원소가 (출력하여)평가되더라도, 나머지 리스트 <span class="fixed">2:3:4:[]</span>는
-          여전히 예비리스트로 남아있습니다. 따라서 저희는 리스트를 필요시 다음 원소가 배달되는 예비리스트라 생각할 수 있습니다.
-          :FIXME 예약 목록들과 같이 간단한 숫자 리스트를 처리하는 것은 세상에서 가장 효율적이지 않을 것이라고 결정 내리는 데에는
+          여전히 예비리스트로 남아있습니다. 따라서 저희는 리스트를 필요시 다음 원소가 배달되는 예비리스트라 생각할 수 있습니다. '단순
+          한 숫자 리스트를&nbsp; 예비리스트처럼 처리하는 것이 세상에서 가장 효율적이지 않을 수 도 있겠다'라고 판단내리기 까지는
           길게 생각할 필요도 없을 것입니다..</p>
         <p>대부분의 경우 이러한 오버헤드가 저희를 괴롭히는건 아니지만, 큰 파일을 읽거나 다룰때 골칫거리로 대두됩니다. 이것이 바로
           하스켈이 <em>bytestrings</em>을 지니고 있는 까닭입니다. Bytestring은 리스트와 비슷하지만, 각
@@ -1772,67 +1772,56 @@ copyFile source dest = do
         <p>하스켈은 매우 훌륭한 타입 시스템입니다. 대수적 자료구조는 <span class="fixed">Maybe</span>나 <span
             class="fixed">Either</span>와 같은 타입을 허용하며, 결과를 표현하기 위해 이러한 타입의 값을 이용할
           수 있습니다. C에서는 실패시 <span class="fixed">-1</span>를 반환하는것이 관습처럼 굳어졌습니다.
-          이는 오직 인간에게만 특별한 의미를 지닙니다. If we're not careful, we might treat these
-          abnormal 비정상적인 값을 values as ordinary ones and then they can cause
-          havoc and dismay in our code. 하스켈의 타입시스템은 이러한 측면에서 좀더 필수적인 안전을 제공해줍니다.
-          함수 <span class="fixed">a -&gt; Maybe b</span>은 <span class="fixed">Just</span>로
-          감싸진&nbsp; <span class="fixed">b</span>를 생성하거나 <span class="fixed">Nothing</span>을
+          이는 오직 인간에게만 특별한 의미를 지닙니다. 만약 주의하지 않은다면, 이러한 비정상적인 값을 다른 평범한 것처럼 다루게되
+          크나큰 혼란을 야기할 것입니다. 하스켈의 타입시스템은 이러한 측면에서 좀더 튼튼한 안전망을 제공해줍니다. 함수 <span class="fixed">a
+            -&gt; Maybe b</span>은 <span class="fixed">Just</span>로 감싸진&nbsp; <span
+            class="fixed">b</span>를 생성하거나 <span class="fixed">Nothing</span>을
           반환한 다는 것을 명확히 나타내고 있습니다. <span class="fixed">a -&gt; Maybe b</span>
           타입은 단순한 <span class="fixed">a -&gt; b</span>타입과 다를 뿐만아니라&nbsp; 만일 이 두
           함수를 돌려쓴다면, 컴파일러는 불만을 토로할 것입니다.</p>
-        <p>잘못된 계산을 대비하기 위한 표현력있는 타입을 가졌음에도 불구하고,
-          I/O contexts에서는 그게 이치에 맞기에 하스켈은 역시 예외를 지원합니다. 불안한 외부세계랑 작업하는 많은 일들이
-          잘못될 수 있습니다. 예를들어, 파일을 열때 분기가 잘못될 수 있습니다. 파일이 잠겨있거나, 아에 없거나, 하드디스트나
-          무언가가 존재하지 않을지도 모릅니다. 따라서 이와 같은 에러가 발생했을때 에러를 다룰 수 있는 곳으로 갈 수 있다면 좋을
-          것입니다.</p>
+        <p>잘못된 계산을 대비하기 위한 표현력있는 타입을 가졌음에도 불구하고, I/O contexts에서는 그게 이치에 맞기에 하스켈은
+          역시 예외를 지원합니다. 불안한 외부세계랑 작업하는 많은 일들이 잘못될 수 있습니다. 예를들어, 파일을 열때 분기가 잘못될 수
+          있습니다. 파일이 잠겨있거나, 아에 없거나, 하드디스트나 무언가가 존재하지 않을지도 모릅니다. 따라서 이와 같은 에러가
+          발생했을때 에러를 다룰 수 있는 곳으로 갈 수 있다면 좋을 것입니다.</p>
         <p>따라서 I/O 코드는 (즉, 불순한 코드는) 예외를 던질 수 있습다. 이는 이치에 맞습니다. 하지만 순수한 코드는 어떨까요?
           흠, 이 역시 예외를 던질 수 있습니다. <span class="fixed">div</span>와 <span class="fixed">head</span>함
           수에 대해 생각해 보시기 바랍니다. 이 둘은 각각 <span class="fixed">(Integral a) =&gt; a
             -&gt; a -&gt; a</span> 과 <span class="fixed">[a] -&gt; a</span>타입으로
-          지니고 있습니다. No <span class="fixed">Maybe</span>나 <span class="fixed">Either</span>은
-          반환 값이 될 수 없으며 in their return type and yet they can both fail! <span
-            class="fixed">div</span> explodes in your face if you try to divide
-          by zero 0으로 나누려 한다면 <span class="fixed">div</span>는 광분할 것이며and <span
-            class="fixed">head</span> throws a tantrum when you give it an empty
-          list.</p>
+          지니고 있습니다. 반환 값이 <span class="fixed">Maybe</span>나 <span class="fixed">Either</span>이
+          아니므로 이 둘 모두 실패할 수 있습니다! 0으로 나누려 한다면 <span class="fixed">div</span>는
+          광분할 것이며 <span class="fixed">head</span>에 비어있는 리스트를 넘겨준다면 짜증낼 것입니다.</p>
         <pre name="code" class="haskell:hs">ghci&gt; 4 `div` 0
 *** Exception: divide by zero
 ghci&gt; head []
 *** Exception: Prelude.head: empty list
 </pre> <img src="http://s3.amazonaws.com/lyah/police.png" alt="Stop right there, criminal scum! Nobody breaks the law on my watch! Now pay your fine or it's off to jail."
           class="left" height="328" width="241">
-        <p>순수한 코드는 예외를 던질 수 있지만, but it they can only be caught in the I/O part
-          of our code (when we're inside a <i>do</i> block that goes into <span
-            class="fixed">main</span>). That's because you don't know when (or
-          if) anything will be evaluated in pure code, because it is lazy and
-          doesn't have a well-defined order of execution, whereas I/O code does.</p>
-        <p>Earlier, we talked about how we should spend as little time as
-          possible in the I/O part of our program. The logic of our program
-          should reside mostly within our pure functions, because their results
-          are dependant only on the parameters that the functions are called
-          with. When dealing with pure functions, you only have to think about
-          what a function returns, because it can't do anything else. This makes
-          your life easier. Even though doing some logic in I/O is necessary
-          (like opening files and the like), it should preferably be kept to a
-          minimum. Pure functions are lazy by default, which means that we don't
-          know when they will be evaluated and that it really shouldn't matter.
-          However, once pure functions start throwing exceptions, it matters
-          when they are evaluated. That's why we can only catch exceptions
-          thrown from pure functions in the I/O part of our code. And that's
-          bad, because we want to keep the I/O part as small as possible.
-          However, if we don't catch them in the I/O part of our code, our
-          program crashes. The solution? Don't mix exceptions and pure code.
-          Take advantage of Haskell's powerful type system and use types like <span
-            class="fixed">Either</span> and <span class="fixed">Maybe</span> to
-          represent results that may have failed.</p>
+        <p>순수한 코드는 예외를 던질 수 있지만, 예외는 I/O 코드에서만(<span class="fixed">main</span>에
+          들어가는 <i>do</i> 블록에 있는 경우) 잡을 수 있습니다 . 이는 저희가 순수한 코드에서 어떠한 것이 평가되는 시점을
+          모르기 때문이며, I/O 코드가 실행 순서가 잘 정의된 반면 순수한 코드는 그렇지 않을 뿐더러 lazy하기 때문입니다.</p>
+        <p>전에, 저희는 저희 프로그램의 I/O 부분에 관해서 어떻게 가능한 적은 시간을 소비할 것인가에 대해 예기를 나눴습니다. 저희
+          프로그램의 로직은 거의 대부분 순수한 함수에 의존하고 있는데, 결과가 오직 함수가 호출되는 인자에 기반하기 때문입니다. 순수한
+          함수를 다룰 때에는, 함수가 어떠한 일도 할 수 없기에 반환하는 값만 신경쓰면 됩니다. 이는 저희의 삶을 보다 쉽게 만들어
+          줍니다. (파일을 여는것과 같은) I/O로된 로직이 필요할 지라도, 가급적 최소화가 될 것입니다. 순수한 함수는 기본적으로
+          lazy합니다. :FIXME 이는 언제 평가되는지 Pure functions are lazy by default, which
+          means that we don't know when they will be evaluated and that it
+          really shouldn't matter. 하지만, 일단 순수한 함수가 예외를 던지면 However, once pure
+          functions start throwing exceptions, it matters when they are
+          evaluated. That's why we can only catch exceptions thrown from pure
+          functions in the I/O part of our code. And that's bad, because we want
+          to keep the I/O part as small as possible. However, if we don't catch
+          them in the I/O part of our code, our program crashes. The solution?
+          Don't mix exceptions and pure code. Take advantage of Haskell's
+          powerful type system and use types like <span class="fixed">Either</span>
+          and <span class="fixed">Maybe</span> to represent results that may
+          have failed.</p>
         <p>That's why we'll just be looking at how to use I/O exceptions for
-          now. I/O 예외는 예외들 입니다 무언가 잘못 돌아갈때 발생할 수 있는&nbsp; that are caused when
-          something goes wrong while we are communicating with the outside world
-          in an I/O action that's part of <span class="fixed">main</span>. For
-          example, we can try opening a file and then it turns out that the file
-          has been deleted or something. Take a look at this program that opens
-          a file whose name is given to it as a command line argument and tells
-          us how many lines the file has.</p>
+          now. I/O exception은 <span class="fixed">main</span>의 일부인 I/O action에서
+          외부 세계랑 소통하면서 무언가 잘못 돌아갈때 발생할 수 있는 예외입니다. 예를들자면, 파일을 열ㅇwe can try
+          opening a file and then it turns out that the file has been deleted or
+          something. 명령 라인 인자로 들어온 이름을 받아 파일을 열어, 얼마나 많은 라인을 가지고 있는비 보여주는 프로그램을
+          살펴보도록 하겠습니다.<br>
+        </p>
         <pre name="code" class="haskell:hs">import System.Environment
 import System.IO
 
@@ -1867,33 +1856,31 @@ main = do (fileName:_) &lt;- getArgs
         <p> <span class="fixed">doesFileExist</span>가 <span class="fixed">doesFileExist
             :: FilePath -&gt; IO Bool</span>을 타입을 갖기에 <span class="fixed">fileExists
             &lt;- doesFileExist fileName</span>을 하였으며, 이는 파일이 존재하는지 부울 값을 결과로 갖는
-          I/O action을 반환한 다는 것을 의미합니다. 저희는 <i>if</i> 표현식에서 <span class="fixed">doesFileExist</span>을
+          I/O action을 반환한 다는 것을 의미합니다. 따라서 저희는 <i>if</i> 표현식에서 <span class="fixed">doesFileExist</span>을
           직접 사용할 수는 없습니다.</p>
         <p>또 다른 해결책은 예외를 사용하는 것입니다. 이러한 상황에서 예외를 사용하는 것은 상당히 괜찮아 보입니다. 파일이 존재하지
           않는 것은 I/O에서 발생한 예외이므로, 이를 I/O 에서 잡는 것은 꽤 괜찮은 방법입니다.</p>
-        <p>To deal with this by using exceptions, we're going to take advantage
-          of the <span class="label function">catch</span> function from <span
-            class="fixed">System.IO.Error</span>. 이의 타입은 <span class="fixed">catch
-            :: IO a -&gt; (IOError -&gt; IO a) -&gt; IO a</span>입니다. 이는 두 인자를
-          취합니다. 하나는 I/O action입니다. 예를들어&nbsp; 이는 파일을 열려고 하는 I/O action이 될 수
-          있습니다. 두번째는 핸들러라 불리는 것입니다. 첫번째 I/O action이 If the first I/O action
-          passed to <span class="fixed">catch</span> throws an I/O exception,
-          that exception gets passed to the handler, which then decides what to
-          do. So the final result is an I/O action that will either act the same
-          as the first parameter or it will do what the handler tells it if the
-          first I/O action throws an exception.</p>
+        <p>To deal with this by using exceptions 예외를 이용하여 이를 처리하기 위해선,&nbsp; <span
+            class="fixed">System.IO.Error</span>의 <span class="label function">catch</span>
+          함수를 살펴봐야 합니다. 이의 타입은 <span class="fixed">catch :: IO a -&gt; (IOError
+            -&gt; IO a) -&gt; IO a</span>입니다. 이는 두 인자를 취합니다. 하나는 I/O action입니다.
+          예를들자면 파일을 열려고 하는 I/O action이 될 수 있습니다. 두번째는 핸들러라 불리는 것입니다. 첫번째 I/O
+          action이 If the first I/O action passed to <span class="fixed">catch</span>
+          throws an I/O exception, that exception gets passed to the handler,
+          which then decides what to do. 따라서 최종 결과는 첫번째 인자와 같거나 So the final
+          result is an I/O action that will either act the same as the first
+          parameter or it will do what the handler tells it if the first I/O
+          action throws an exception.</p>
         <img src="http://s3.amazonaws.com/lyah/puppy.png" alt="non sequitor" class="right"
           height="240" width="334">
-        <p>Java나 Python과 같은 언어에서의&nbsp; <i>try-catch</i> 블록과 <span class="fixed">catch</span>함
-          수는 유사합니다. 첫번째 인자는&nbsp; The first parameter is the thing to try, kind
-          of like the stuff in the <i>try</i> block in other, imperative
-          languages. The second parameter is the handler that takes an
-          exception, just like most <i>catch</i> blocks take exceptions that
-          you can then examine to see what happened. The handler is invoked if
-          an exception is thrown.</p>
-        <p>The handler takes a value of type <span class="fixed">IOError</span>타
-          입 값을 갖습니다, which is a value that signifies that an I/O exception
-          occurred. It also carries information regarding the type of the
+        <p> <span class="fixed">catch</span>함수는 Java나 Python과 같은 언어에서의 <i>try-catch</i>
+          블록과 유사합니다. 첫번째 인자는&nbsp; The first parameter is the thing to try, kind
+          of like the stuff in the <i>try</i> block in other, . The second
+          parameter is the handler that takes an exception, just like most <i>catch</i>
+          blocks take exceptions that you can then examine to see what happened.
+          The handler is invoked if an exception is thrown.</p>
+        <p>핸들러는 I/O exception이 발생했다는 것을 알려주는 <span class="fixed">IOError</span>타
+          입 값을 취합니다. It also carries information regarding the type of the
           exception that was thrown. How this type is implemented depends on the
           implementation of the language itself, which means that we can't
           inspect values of the type <span class="fixed">IOError</span> by
